--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "node-statsd": "^0.1.0",
     "nomnom": "^1.8.1",
     "redis": "^0.12.1",
-    "winston": "^0.8.3"
+    "winston": "^0.8.3",
+    "winston-redis": "^1.0.0"
   },
   "bin": {
     "quarry": "./cli.js"
